Pregunta con radio button y pregunta con spinner

--- a/quiz/app/src/main/res/values/strings.xml
+++ b/quiz/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Quiz</string>
+    <string-array name="bad_guys">
+        <item>Doctor Octopus</item>
+        <item>Rhino</item>
+        <item>Electro</item>
+        <item>Venom</item>
+    </string-array>
 </resources>
