Modificada Configuración, para introducir un botón perfiles
Nueva actividad perfiles:
    -Se muesta la lista de los perfiles actuales con foto,Nickname, Numero partidas, fecha de última partida
    - Falta copiar aqui la creación de un nuevo usuario

--- a/QuizPro/app/src/main/res/values/strings.xml
+++ b/QuizPro/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="clasificacion">Clasificacion</string>
     <string name="configuracion">Configuracion</string>
     <string name="config">config</string>
+
+    <array name="profile_pics">
+        <item>@drawable/spider</item>
+    </array>
 </resources>
