--- a/Scaffold/app/src/main/res/values/strings.xml
+++ b/Scaffold/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="config">Config</string>
     <string name="points">Points</string>
     <string name="menu">Menu</string>
+    <string name="pause_game">Pause Game</string>
 </resources>
